--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -46,7 +46,7 @@ post_class: post-template
                 <div class="clearfix"></div>
 			</div>
 
-            <!-- Post Date -->
+            <!-- Post Date 
             <p>
             <small>
                 <span class="post-date"><time class="post-date" datetime="{{ page.date | date:"%Y-%m-%d" }}">{{ page.date | date_to_string }}</time></span>           
@@ -54,7 +54,7 @@ post_class: post-template
                 (Updated: <time datetime="{{ page.last_modified_at | date_to_xmlschema }}" itemprop="dateModified">{{ page.last_modified_at | date: "%b %-d, %Y" }}</time>)
                 {% endif %}
                 </small>
-            </p>
+            </p> -->
             
 			
             
