--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -96,10 +96,11 @@ post_class: post-template
 
         
 
-		<!-- Sidebar -->
+		<!-- Sidebar 
         <div class="col-sm-4">
             {% include sidebar.html %}
             </div>
+		-->
         
         
 
