--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -75,7 +75,7 @@ post_class: post-template
             <!-- End Prev/Next -->
             
             
-             <!-- Author Box -->
+             <!-- Author Box 
                 {% if page.author %}				
 				<div class="row post-top-meta">
 					<div class="col-md-2">
@@ -87,6 +87,7 @@ post_class: post-template
 					</div>
 				</div>				
                 {% endif %}
+			-->
             
             
 
